<resources>
    <string name="app_name">VolleyGson</string>
    <string name="student">Mahasiswa</string>
    <string name="lecturer">Dosen</string>
    <string name="subject">Mata Kuliah</string>
    <string name="nim">NIM</string>
    <string name="name">Nama</string>
    <string name="address">Alamat</string>
    <string name="ttl">TTL</string>
    <string name="status">Status</string>
    <string name="press_once_again_to_exit">Tekan sekali lagi untuk keluar</string>
    <string name="save">Simpan</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="api">API</string>
    <string name="source_code">Source Code</string>
    <string name="refresh">Refresh</string>
    <string name="connect_server">Device is connected to the Server</string>
    <string name="not_connected">Device not connected to the Server</string>
</resources>