<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/nim"
            app:counterEnabled="true"
            app:counterMaxLength="9"
            app:endIconContentDescription="@string/nim"
            app:endIconDrawable="@drawable/ic_check_circle_24dp"
            app:endIconMode="custom"
            app:errorEnabled="true"
            app:helperText="@string/nim"
            app:helperTextEnabled="true"
            app:startIconContentDescription="@string/nim"
            app:startIconDrawable="@drawable/ic_favorite_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="9" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/name"
            app:counterEnabled="true"
            app:endIconContentDescription="@string/name"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperText="@string/name"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/address"
            app:counterEnabled="true"
            app:endIconContentDescription="@string/address"
            app:errorEnabled="true"
            app:helperText="@string/address"
            app:helperTextEnabled="true"
            app:startIconContentDescription="@string/address"
            app:startIconDrawable="@drawable/ic_favorite_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/ttl"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ttl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/status"
            app:counterEnabled="true"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:startIconContentDescription="@string/status"
            app:startIconDrawable="@drawable/ic_favorite_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            style="@style/ripple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/simpan_tambah_ubah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tombol_bulat"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>

</ScrollView>